syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetDataStream (StreamRequest) returns (stream StreamResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message StreamRequest {
  int32 id = 1;
}

message StreamResponse {
  string result = 1;  
}